# sample-marimo-titanic

./: .gitignore  README.md  pyproject.toml  titanic.ipynb  titanic.py
